--- a/patron_MVC/pom.xml
+++ b/patron_MVC/pom.xml
@@ -31,5 +31,12 @@
         <version>5.6.2</version>
         <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.30</version>
+	</dependency>
+
   </dependencies>
 </project>
